# project-face-recognition

./: .env  README.md  capture_faces.py  identify_faces.py  process_faces.py  pyproject.toml
